target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2020-12-20 - 00:12:41 +0000
  labels:
    app.kubernetes.io/name: vaccine-transport-simulator
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: vaccine-transport-simulator
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: vaccine-transport-simulator
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2020-12-20 - 00:12:41 +0000
  labels:
    app.kubernetes.io/name: vaccine-transport-simulator
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: vaccine-transport-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vaccine-transport-simulator
      app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2020-12-20 - 00:12:41 +0000
      labels:
        app.kubernetes.io/name: vaccine-transport-simulator
        app.kubernetes.io/version: 1.0-SNAPSHOT
    spec:
      containers:
      - args:
        - -jar
        - /deployments/target/vaccine-transport-simulator-1.0-SNAPSHOT-runner.jar
        - -cp
        - /deployments/target/lib/io.quarkus.quarkus-security-runtime-spi-1.10.2.Final.jar:/deployments/target/lib/io.quarkus.security.quarkus-security-1.1.3.Final.jar:/deployments/target/lib/io.netty.netty-codec-4.1.49.Final.jar:/deployments/target/lib/io.quarkus.quarkus-netty-1.10.2.Final.jar:/deployments/target/lib/io.quarkus.quarkus-vertx-core-1.10.2.Final.jar:/deployments/target/lib/io.vertx.vertx-web-common-3.9.4.jar:/deployments/target/lib/io.vertx.vertx-auth-common-3.9.4.jar:/deployments [...]
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        command:
        - java
        image: image-registry.openshift-image-registry.svc:5000/vaccine/vaccine-transport-simulator:1.0-SNAPSHOT
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: vaccine-transport-simulator
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
      serviceAccount: vaccine-transport-simulator
